<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="Назад" />

            <TextView
                android:id="@+id/textRools0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/Rools0"
                android:textColor="@color/most"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRools1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/Rools1"
                android:textColor="@color/most"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRools2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/Rools2"
                android:textColor="@color/most"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRools3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/Rools3"
                android:textColor="@color/most"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRools4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/Rools4"
                android:textColor="@color/most"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>